# VoIP

./: PROGRESS.md  PROJECT_SUMMARY.md  VoIP.sln  build_opus.bat  build_rnnoise.bat  build_speexdsp.bat
Client/: Client.vcxproj
Client/src/: CVoIPClientApp.cpp  CVoIPClientApp.h  main.cpp
GameClientMock/: GameClientMock.vcxproj
GameClientMock/src/: CVoIP.cpp  CVoIP.h  main.cpp
Server/: Server.vcxproj
Server/src/: CVoIPServer.cpp  CVoIPServer.h  main.cpp
Test/: Test.vcxproj
Test/src/: main.cpp
VoIP/: VoIP.vcxproj
VoIP/include/VoIP/: Audio.h  Channel.h  Codec.h  Ipc.h  Mix.h  Network.h  VoIP.h
VoIP/src/: Audio.cpp  Channel.cpp  Codec.cpp  Ipc.cpp  Mix.cpp  Network.cpp
rnnoise/: CMakeLists.txt
rnnoise-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rnnoise.sln  rnnoise.vcxproj  rnnoise.vcxproj.filters
rnnoise-build/Debug/: rnnoise.lib
rnnoise-build/Release/: rnnoise.lib
rnnoise-build/rnnoise.dir/Debug/rnnoise.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
rnnoise-build/rnnoise.dir/Release/: rnnoise.lib.recipe
rnnoise-build/rnnoise.dir/Release/rnnoise.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  rnnoise.lastbuildstate
rnnoise-build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
rnnoise-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
rnnoise-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
rnnoise-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
rnnoise-build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
rnnoise-build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
rnnoise/src/: celt_lpc.c  pitch.c
speexdsp/: CMakeLists.txt
